2007-08-31    <mschimek@users.sf.net>

	* test/test-vps.c, test/test-dvb_mux.cc: Added GPLv2+ blurb.

	* test/sliced2pes.c: Use the new helper functions. Added support
	  for DVB PES & TS input streams and the standard options -h -q -V.
          Added data identifier and min/max PES packet size options.
	  Added an option to generate a TS stream.

	* test/capture.c: Use the new helper functions. Added PID
	  argument to -t (ts) option.
	* test/Makefile.am (capture_SOURCES): Use helper functions.

	* test/sliced.h, test/sliced.c: Fixed option_ts_pid to handle
	  64 bit result of strtoul().

	* src/pfc_demux.c (vbi_pfc_demux_new): Dox fixed.

	* src/page_table.h, src/page_table.c: Added doxumentation.

	* test/test-dvb_mux.cc, src/dvb_mux.c, src/dvb_mux.h: On a second
	  though vbi_dvb_mux_get_min/max_pes_packet_size sounds better.

2007-08-29    <mschimek@users.sf.net>

	* test/Makefile.am (LDADD), contrib/Makefile.am (LDADD),
	  configure.in: Don't require libzvbi.a (bug #1692015).

	* src/io-sim.c (warning): Missing __FILE__ parameter.

2007-08-27    <mschimek@users.sf.net>

	* src/proxy-msg.c (vbi_proxy_msg_handle_read): printf size_t fix.

	* src/dvb_mux.c (encode_stuffing): Fixed 64 bit pointer addition.

	* src/misc.c, src/misc.h, src/intl-priv.h, src/conv.c:
	  Compile fixes.

	* test/export.c: Replaced read loop etc by new read_stream helper
	  functions. Added support for DVB PES & TS streams and the
	  standard options -h -q -V.
	* test/decode.c: Replaced read loop etc by new read_stream helper
	  functions. Added support for DVB TS streams. Replaced some other
	  functions by helpers. Added -q (quiet) switch. Renamed -m
	  (metronome) switch to -M, -T (time) to -m because -T is --ts
	  everywhere else.
	* test/caption.c: Replaced read loop etc by new read_stream helper
	  functions. 
	* test/sliced.c, test/sliced.h: Added new helper functions.
	  Improved the sliced VBI file reading functions.

	* test/capture.c (main): vbi_dvb_mux interface changed.